Package_Tools/include-C/apr-1.0/inarbeit/h/apr_network_io.h


#define APR_MAX_SECS_TO_LINGER 30
#define APRMAXHOSTLEN 256
#define APR_ANYADDR "0.0.0.0"
#define APR_SO_LINGER        1    
#define APR_SO_KEEPALIVE     2    
#define APR_SO_DEBUG         4    
#define APR_SO_NONBLOCK      8    
#define APR_SO_REUSEADDR     16   
#define APR_SO_SNDBUF        64   
#define APR_SO_RCVBUF        128  
#define APR_SO_DISCONNECTED  256  
#define APR_TCP_NODELAY      512  
#define APR_INCOMPLETE_WRITE 8192 
#define APR_IPV6_ADDR_OK  0x02  
#define APR_INADDR_NONE INADDR_NONE
#define APR_INADDR_NONE ((unsigned int) 0xffffffff)
#define APR_INET     AF_INET
#define APR_UNSPEC   AF_UNSPEC
#define APR_UNSPEC   0
#define APR_INET6    AF_INET6
#define APR_UNIX    AF_UNIX
#define APR_UNIX    AF_LOCAL
#define APR_UNIX    AF_UNIX
#define APR_UNIX    AF_LOCAL
#define APR_UNIX    1234
#define APR_PROTO_TCP       6   
#define APR_PROTO_UDP      17   
#define APR_PROTO_SCTP    132   
typedef enum {
    APR_LOCAL,   
    APR_REMOTE   
} apr_interface_e;
typedef struct apr_socket_t     apr_socket_t;
typedef struct apr_hdtr_t       apr_hdtr_t;
typedef struct apr_ipsubnet_t apr_ipsubnet_t;
typedef apr_uint16_t            apr_port_t;
typedef struct apr_sockaddr_t apr_sockaddr_t;
struct apr_sockaddr_t {
    apr_pool_t *pool;
    char *hostname;
    char *servname;
    apr_port_t port;
    apr_int32_t family;
    apr_socklen_t salen;
    int ipaddr_len;
    int addr_str_len;
    void *ipaddr_ptr;
    apr_sockaddr_t *next;
    union {
        struct sockaddr_in sin;
#if APR_HAVE_IPV6
        struct sockaddr_in6 sin6;
#endif
#if APR_HAVE_SA_STORAGE
        struct sockaddr_storage sas;
#endif
#if APR_HAVE_SOCKADDR_UN
        struct sockaddr_un unx;
#endif
    } sa;
};
#define APR_SENDFILE_DISCONNECT_SOCKET      1
struct apr_hdtr_t {
    struct iovec* headers;
    int numheaders;
    struct iovec* trailers;
    int numtrailers;
};
apr_status_t apr_socket_create(apr_socket_t **new_sock, 
                                            int family, int type,
                                            int protocol,
                                            apr_pool_t *cont);
apr_status_t apr_socket_shutdown(apr_socket_t *thesocket,
                                              apr_shutdown_how_e how);
apr_status_t apr_socket_close(apr_socket_t *thesocket);
apr_status_t apr_socket_bind(apr_socket_t *sock, 
                                          apr_sockaddr_t *sa);
apr_status_t apr_socket_listen(apr_socket_t *sock, 
                                            apr_int32_t backlog);
apr_status_t apr_socket_accept(apr_socket_t **new_sock, 
                                            apr_socket_t *sock,
                                            apr_pool_t *connection_pool);
apr_status_t apr_socket_connect(apr_socket_t *sock,
                                             apr_sockaddr_t *sa);
apr_status_t apr_socket_atreadeof(apr_socket_t *sock,
                                               int *atreadeof);
apr_status_t apr_sockaddr_info_get(apr_sockaddr_t **sa,
                                          const char *hostname,
                                          apr_int32_t family,
                                          apr_port_t port,
                                          apr_int32_t flags,
                                          apr_pool_t *p);
apr_status_t apr_sockaddr_info_copy(apr_sockaddr_t **dst,
                                                 const apr_sockaddr_t *src,
                                                 apr_pool_t *p);
apr_status_t apr_sockaddr_zone_set(apr_sockaddr_t *sa,
                                                const char *zone_id);
apr_status_t apr_sockaddr_zone_get(const apr_sockaddr_t *sa,
                                                const char **name,
                                                apr_uint32_t *id,
                                                apr_pool_t *p);
apr_status_t apr_getnameinfo(char **hostname,
                                          apr_sockaddr_t *sa,
                                          apr_int32_t flags);
apr_status_t apr_parse_addr_port(char **addr,
                                              char **scope_id,
                                              apr_port_t *port,
                                              const char *str,
                                              apr_pool_t *p);
apr_status_t apr_gethostname(char *buf, int len, apr_pool_t *cont);
apr_status_t apr_socket_data_get(void **data, const char *key,
                                              apr_socket_t *sock);
apr_status_t apr_socket_data_set(apr_socket_t *sock, void *data,
                                              const char *key,
                                              apr_status_t (*cleanup)(void*));
apr_status_t apr_socket_send(apr_socket_t *sock, const char *buf, 
                                          apr_size_t *len);
apr_status_t apr_socket_sendv(apr_socket_t *sock, 
                                           const struct iovec *vec,
                                           apr_int32_t nvec, apr_size_t *len);
apr_status_t apr_socket_sendto(apr_socket_t *sock, 
                                            apr_sockaddr_t *where,
                                            apr_int32_t flags, const char *buf, 
                                            apr_size_t *len);
apr_status_t apr_socket_recvfrom(apr_sockaddr_t *from, 
                                              apr_socket_t *sock,
                                              apr_int32_t flags, char *buf, 
                                              apr_size_t *len);
apr_status_t apr_socket_sendfile(apr_socket_t *sock, 
                                              apr_file_t *file,
                                              apr_hdtr_t *hdtr,
                                              apr_off_t *offset,
                                              apr_size_t *len,
                                              apr_int32_t flags);
apr_status_t apr_socket_recv(apr_socket_t *sock, 
                                   char *buf, apr_size_t *len);
apr_status_t apr_socket_opt_set(apr_socket_t *sock,
                                             apr_int32_t opt, apr_int32_t on);
apr_status_t apr_socket_timeout_set(apr_socket_t *sock,
                                                 apr_interval_time_t t);
apr_status_t apr_socket_opt_get(apr_socket_t *sock, 
                                             apr_int32_t opt, apr_int32_t *on);
apr_status_t apr_socket_timeout_get(apr_socket_t *sock, 
                                                 apr_interval_time_t *t);
apr_status_t apr_socket_atmark(apr_socket_t *sock, 
                                            int *atmark);
apr_status_t apr_socket_addr_get(apr_sockaddr_t **sa,
                                              apr_interface_e which,
                                              apr_socket_t *sock);
apr_status_t apr_sockaddr_ip_get(char **addr, 
                                              apr_sockaddr_t *sockaddr);
apr_status_t apr_sockaddr_ip_getbuf(char *buf, apr_size_t buflen,
                                                 apr_sockaddr_t *sockaddr);
int apr_sockaddr_equal(const apr_sockaddr_t *addr1,
                                    const apr_sockaddr_t *addr2);
int apr_sockaddr_is_wildcard(const apr_sockaddr_t *addr);
apr_status_t apr_socket_type_get(apr_socket_t *sock,
                                              int *type);
apr_status_t apr_getservbyname(apr_sockaddr_t *sockaddr, 
                                            const char *servname);
apr_status_t apr_ipsubnet_create(apr_ipsubnet_t **ipsub, 
                                              const char *ipstr, 
                                              const char *mask_or_numbits, 
                                              apr_pool_t *p);
int apr_ipsubnet_test(apr_ipsubnet_t *ipsub, apr_sockaddr_t *sa);
apr_status_t apr_socket_accept_filter(apr_socket_t *sock, char *name,
                                      char *args);
apr_status_t apr_socket_protocol_get(apr_socket_t *sock,
                                                  int *protocol);
apr_status_t apr_mcast_join(apr_socket_t *sock,
                                         apr_sockaddr_t *join,
                                         apr_sockaddr_t *iface,
                                         apr_sockaddr_t *source);
apr_status_t apr_mcast_leave(apr_socket_t *sock,
                                          apr_sockaddr_t *addr,
                                          apr_sockaddr_t *iface,
                                          apr_sockaddr_t *source);
apr_status_t apr_mcast_hops(apr_socket_t *sock,
                                         apr_byte_t ttl);
apr_status_t apr_mcast_loopback(apr_socket_t *sock,
                                             apr_byte_t opt);
apr_status_t apr_mcast_interface(apr_socket_t *sock,
                                              apr_sockaddr_t *iface);